@@ -13,7 +13,7 @@
 	<property name="ccobf.version" value="1.0.0.15" />
 	<property name="ccc.version" value="0.9.0.7" />
 	<property name="fmp.version" value="1.0.0.191" />
-	<property name="nei.version" value="1.6.1.5" />
+	<property name="nei.version" value="1.6.1.5_d1" />
 	<property name="tcons.version" value="1.4.7d4" />
 
 	<property name="src.dir" value="ProjectRed" />
