@@ -1,42 +1,6 @@
 package mrtjp.projectred.exploration;
 
-import static mrtjp.projectred.ProjectRedExploration.blockOres;
-import static mrtjp.projectred.ProjectRedExploration.blockStainedLeaf;
-import static mrtjp.projectred.ProjectRedExploration.blockStainedSapling;
-import static mrtjp.projectred.ProjectRedExploration.blockStoneWalls;
-import static mrtjp.projectred.ProjectRedExploration.blockStones;
-import static mrtjp.projectred.ProjectRedExploration.itemBackpack;
-import static mrtjp.projectred.ProjectRedExploration.itemDiamondSickle;
-import static mrtjp.projectred.ProjectRedExploration.itemGoldSaw;
-import static mrtjp.projectred.ProjectRedExploration.itemGoldSickle;
-import static mrtjp.projectred.ProjectRedExploration.itemIronSickle;
-import static mrtjp.projectred.ProjectRedExploration.itemPeridotAxe;
-import static mrtjp.projectred.ProjectRedExploration.itemPeridotHoe;
-import static mrtjp.projectred.ProjectRedExploration.itemPeridotPickaxe;
-import static mrtjp.projectred.ProjectRedExploration.itemPeridotSaw;
-import static mrtjp.projectred.ProjectRedExploration.itemPeridotShovel;
-import static mrtjp.projectred.ProjectRedExploration.itemPeridotSickle;
-import static mrtjp.projectred.ProjectRedExploration.itemPeridotSword;
-import static mrtjp.projectred.ProjectRedExploration.itemRubyAxe;
-import static mrtjp.projectred.ProjectRedExploration.itemRubyHoe;
-import static mrtjp.projectred.ProjectRedExploration.itemRubyPickaxe;
-import static mrtjp.projectred.ProjectRedExploration.itemRubySaw;
-import static mrtjp.projectred.ProjectRedExploration.itemRubyShovel;
-import static mrtjp.projectred.ProjectRedExploration.itemRubySickle;
-import static mrtjp.projectred.ProjectRedExploration.itemRubySword;
-import static mrtjp.projectred.ProjectRedExploration.itemSapphireAxe;
-import static mrtjp.projectred.ProjectRedExploration.itemSapphireHoe;
-import static mrtjp.projectred.ProjectRedExploration.itemSapphirePickaxe;
-import static mrtjp.projectred.ProjectRedExploration.itemSapphireSaw;
-import static mrtjp.projectred.ProjectRedExploration.itemSapphireShovel;
-import static mrtjp.projectred.ProjectRedExploration.itemSapphireSickle;
-import static mrtjp.projectred.ProjectRedExploration.itemSapphireSword;
-import static mrtjp.projectred.ProjectRedExploration.itemStoneSickle;
-import static mrtjp.projectred.ProjectRedExploration.itemWoodSickle;
-import static mrtjp.projectred.ProjectRedExploration.itemWoolGin;
-import static mrtjp.projectred.ProjectRedExploration.toolMaterialPeridot;
-import static mrtjp.projectred.ProjectRedExploration.toolMaterialRuby;
-import static mrtjp.projectred.ProjectRedExploration.toolMaterialSapphire;
+import static mrtjp.projectred.ProjectRedExploration.*;
 import mrtjp.projectred.ProjectRedExploration;
 import mrtjp.projectred.core.Configurator;
 import mrtjp.projectred.core.IProxy;
